[gd_scene load_steps=16 format=2]

[ext_resource path="res://ArmCode.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 0.827451 )

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 1 )
top_radius = 1.4
bottom_radius = 1.4
height = 0.2

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 0.886275 )
roughness = 0.5

[sub_resource type="CylinderMesh" id=4]
material = SubResource( 3 )
top_radius = 0.25
bottom_radius = 0.25
height = 1.0

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.172549, 0.235294, 0.65098, 1 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
size = Vector3( 2, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0, 0, 0.886275 )
roughness = 0.5

[sub_resource type="CylinderMesh" id=8]
material = SubResource( 7 )
top_radius = 0.25
bottom_radius = 0.25
height = 1.0

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.172549, 0.235294, 0.65098, 1 )

[sub_resource type="CubeMesh" id=10]
material = SubResource( 9 )
size = Vector3( 2, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0, 0, 0, 0.886275 )

[sub_resource type="CylinderMesh" id=12]
material = SubResource( 11 )
top_radius = 0.25
bottom_radius = 0.25
height = 0.5

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0, 1, 0.929412, 1 )

[sub_resource type="CubeMesh" id=14]
material = SubResource( 13 )
size = Vector3( 0.7, 0.15, 0.5 )

[node name="Spatial" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.713744, 0.335814, -0.614653, -0.000961214, 0.877096, 0.480315, 0.700406, 0.343413, -0.625699, -4.932, 6, -4.775 )
current = true
size = 8.0

[node name="art1" type="CSGMesh" parent="."]
use_collision = true
mesh = SubResource( 2 )
script = ExtResource( 1 )

[node name="art2" type="CSGMesh" parent="art1"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.35, 0 )
mesh = SubResource( 4 )

[node name="largo1" type="CSGMesh" parent="art1/art2"]
transform = Transform( 1, -7.93116e-15, 0, 1.34476e-14, 1, 0, 0, 0, 1, 1.25, -7.10543e-15, -9.31323e-10 )
mesh = SubResource( 6 )

[node name="art3" type="CSGMesh" parent="art1/art2/largo1"]
transform = Transform( 1, 7.10543e-15, 0, -7.10543e-15, 1, 0, 0, 0, 1, 1.25, -2.13163e-14, 9.31322e-10 )
mesh = SubResource( 8 )

[node name="largo2" type="CSGMesh" parent="art1/art2/largo1/art3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 0, 0 )
mesh = SubResource( 10 )

[node name="gear1" type="CSGMesh" parent="art1/art2/largo1/art3/largo2"]
transform = Transform( 0.999999, -1.90582e-21, -1.42109e-14, 2.13163e-14, -4.37114e-08, -1, 0, 0.999999, -4.37113e-08, 1.25, 1.42109e-14, 0 )
mesh = SubResource( 12 )

[node name="finger1" type="CSGMesh" parent="art1/art2/largo1/art3/largo2/gear1"]
transform = Transform( 0.906306, 0.422618, 1.96229e-21, 1.84732e-08, -3.9616e-08, 0.999998, 0.422618, -0.906308, -4.37113e-08, 0.5, 0, 0.3 )
mesh = SubResource( 14 )

[node name="gear2" type="CSGMesh" parent="art1/art2/largo1/art3/largo2"]
transform = Transform( 0.999999, -1.90582e-21, -1.42109e-14, 2.4869e-14, -4.37114e-08, -1, 0, 0.999999, -4.37113e-08, 1.25, 1.42109e-14, 0 )

[node name="finger2" type="CSGMesh" parent="art1/art2/largo1/art3/largo2/gear2"]
transform = Transform( 0.906307, -0.422618, 2.71056e-21, -1.84732e-08, -3.9616e-08, 0.999999, -0.422618, -0.906308, -4.37114e-08, 0.499999, 2.10681e-15, -0.3 )
mesh = SubResource( 14 )

